# marple

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEMOS.md  FEATURES.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt  workspace.apl
appendices/: index.html
appendices/changelog/: index.html
appendices/further-reading/: index.html
archive/: MARPLE_EA_Brief.md  MARPLE_Indexing.md  MARPLE_Language_Reference.md  MARPLE_Namespaces_And_IBeams.md  MARPLE_Rank_Operator.md  MARPLE_Web_REPL_Phase1_Brief.md  MARPLE_Web_REPL_Plan.md  primitive-extraction-warnings.md
data/: MARPLE_Docs_Brief.md  bugz.txt  google-chat.txt
demos/: index.html
docs/: index.md  marple_test_reference.apl  marple_tests.py
docs/appendices/: changelog.md  contributing.md  further-reading.md  glossary.md  index.md
docs/demos/: index.md
docs/explanation/: comparison.md  config-refactoring.md  dfns-vs-tradfns.md  index.md  leading-axis.md  life.md  platform-abstractions.md  python-connection.md  rank-history.md  why-marple.md
docs/getting-started/: first-session.md  index.md  installation.md  repl.md
docs/how-to/: index.md  jupyter.md
docs/progress/: 2026-04-12.md
docs/reference/: error-messages.md  glyph-input.md  grammar.md  index.md
docs/troubleshooting/: common-errors.md  common-mistakes.md  faq.md  index.md  performance-issues.md  repl-issues.md
docs/tutorials/: index.md
examples/: 01_primitives.marple  01_primitives.out  02_dfns.marple  02_dfns.out  03_namespaces.marple  03_namespaces.out  04_errors.marple  04_errors.out  05_pico_io.marple  06_numeric_types.marple  07_cr_fx.marple  08_operators.marple  09_fmt.marple  10_system.marple  11_power_and_tco.marple  12_life.marple  13_partition.marple  data.txt  scores.csv
explanation/: index.html
explanation/comparison/: index.html
explanation/dfns-vs-tradfns/: index.html
explanation/rank-history/: index.html
explanation/why-marple/: index.html
getting-started/: index.html
getting-started/first-session/: index.html
getting-started/installation/: index.html
how-to/: index.html
notebooks/: Jupyter-Life.ipynb
parked/: test_decode_spec.py
pico_stubs/: __future__.py  abc.py  contextlib.py  typing.py
plan/: lessons.md  marple-plan.mm  narrow-any-types.md  plan-20260427.md  plan-convert-missing-tests.md  plan-numeric-backend-port.md  plan-scalar-convention-fix.md  post-scalar-cleanup.md  progress-2026-03-21.md  progress-2026-03-22-pm.md  progress-2026-03-22.md  progress-2026-03-23.md  progress-2026-03-24.md  progress-2026-03-25.md  progress-2026-03-26.md  progress-2026-03-27.md  progress-2026-03-28.md  progress-2026-03-29.md  progress-2026-03-30.md  progress-2026-03-31.md  progress-2026-04-01.md  progress-2026-04-02.md  progress-2026-04-03.md  progress-2026-04-05.md  progress-2026-04-06.md  progress-2026-04-07.md  progress-2026-04-08.md  progress-2026-04-09.md  progress-2026-04-11-pm.md  progress-2026-04-11.md  progress-2026-04-13.md  progress-2026-04-14.md  progress-2026-04-15.md  progress-2026-04-16.md  progress-2026-04-19.md  progress-2026-04-20-pm.md
plan/archive/: plan-char-uint32-migration.md
reference/array-model/: index.html
reference/direct-definition/: index.html
reference/error-messages/: index.html
reference/glyph-input/: index.html
reference/grammar/: index.html
reference/indexing/: index.html
reference/operators/: index.html
reference/primitives/: index.html
reference/standard-library/: index.html
reference/system/: index.html
scripts/: WIFI_CONFIG.py.example  aplkeys.sh  deploy.sh  explorer_display.py  marple_config.py  pico_client.py  pico_demo.py  pico_eval.py  presto_display.py  pride_demo.py  pride_local.sh  pride_pico.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/explanation/: index.html
site/how-to/: index.html
site/reference/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/tutorials/: index.html
src/marple/: __init__.py  apl_value.py  arraymodel.py  backend.py  backend_functions.py  cells.py  config.py  dfn_binding.py  dyadic_functions.py  engine.py  environment.py  errors.py  executor.py  fmt.py  formatting.py  functions.py  get_numpy.py  glyphs.py  ibeam_registry.py  interpreter.py  monadic_functions.py  namespace.py  nodes.py  numpy_aplarray.py  numpy_array.py  operator_binding.py  parser.py  repl.py  script.py  structural.py  symbol_table.py  system_commands.py  terminal.py  tokenizer.py  ulab_aplarray.py  ulab_aplarray.py.old  workspace.py
tests/: conftest.py  test_array_factory.py  test_arraymodel.py  test_assignment.py  test_backend.py  test_cells.py  test_ct.py  test_dfns.py  test_display.py  test_dr_backend.py  test_dual_engine.py  test_ea.py  test_engine.py  test_eval_order.py  test_extended_functions.py  test_from.py  test_functions.py  test_glyphs.py  test_ibeam.py  test_indexing.py  test_integration.py  test_interpreter.py  test_match.py  test_matrices.py  test_matrix_ops.py  test_name_table.py  test_namespaces.py  test_numeric_types.py  test_numpy_array.py  test_operators.py  test_parser.py  test_parser_binding.py  test_phase4_remaining.py  test_pico_compat.py  test_predicates_disjoint.py  test_products.py  test_random.py  test_rank.py  test_script.py  test_statement_separator.py  (+6 more)
tests/pico/: conftest.py  (+3 more)
troubleshooting/: index.html
tutorials/: index.html
(+452 files in other folders)
