[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marple-lang"
version = "0.4.3"
description = "Mini APL in Python Language Experiment. Uses numpy arrays with Python list fallback."
authors = [{name = "Romilly Cocking", email = "romilly.cocking@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["aiohttp>=3.9"]

[project.scripts]
marple = "marple.repl:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pyright",
    "PyHamcrest",
]

[project.urls]
Homepage = "https://github.com/romilly/marple"
Repository = "https://github.com/romilly/marple.git"
Issues = "https://github.com/romilly/marple/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marple = ["web/static/*.html", "stdlib/**/*.apl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not pico'"
markers = [
    "pico: end-to-end tests requiring a connected Raspberry Pi Pico (deselect with '-m not pico')",
]
asyncio_mode = "auto"