[build-system]
requires = ["setuptools==82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marple-lang"
version = "0.8.65"
description = "Mini APL in Python Language Experiment. Uses numpy arrays."
authors = [{name = "Romilly Cocking", email = "romilly.cocking@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["aiohttp==3.13.3", "numpy==2.4.3"]

[project.scripts]
marple = "marple.repl:main"
marple-server = "marple.web.server:main"
marple-jupyter-install = "marple.jupyter.install:install_kernel"

[project.optional-dependencies]
jupyter = ["ipykernel==7.2.0", "jupyter_client==8.8.0"]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pyright==1.1.408",
    "PyHamcrest==2.1.0",
    "pytest-asyncio==1.3.0",
]

[project.urls]
Homepage = "https://github.com/romilly/marple"
Repository = "https://github.com/romilly/marple.git"
Issues = "https://github.com/romilly/marple/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marple = ["web/static/*.html", "stdlib/**/*.apl", "jupyter/resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow' --ignore=tests/web"
markers = [
    "slow: slow tests (PRIDE, deep TCO, delays) — run with pytest -m slow",
]
asyncio_mode = "auto"